--- a/public/index.html
+++ b/public/index.html
@@ -15,11 +15,14 @@
 	<body class="container">
 		<h1 class="mt-2">Socket Client</h1>
 		<hr />
-		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-			crossorigin="anonymous"
-		></script>
+
+		<p>
+			Server Status:
+			<span id="lblOnline" class="text-success">Online</span>
+			<span id="lblOffline" class="text-danger">Offline</span>
+		</p>
+
+		<script src="./socket.io/socket.io.js"></script>
 		<script src="./js/socket-client.js"></script>
 	</body>
 </html>
