send message from client to server

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,15 @@
 			<span id="lblOffline" class="text-danger">Offline</span>
 		</p>
 
+		<div class="row">
+			<div class="col">
+				<input type="text" id="txtMessage" class="form-control" />
+			</div>
+			<div class="col">
+				<button id="btnSend" class="btn btn-primary">Send</button>
+			</div>
+		</div>
+
 		<script src="./socket.io/socket.io.js"></script>
 		<script src="./js/socket-client.js"></script>
 	</body>
